# Hack-Change

./: .gitignore  README  README.md  db4audio.py  music.ipynb  package-lock.json  package.json  requirements.txt  settings.gradle.kts
FrontendChange/: package-lock.json  package.json
FrontendChange/Music_app /: package-lock.json
FrontendChange/Music_app /src/: App.jsx  global.module.scss
FrontendChange/node_modules /: .package-lock.json
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
backend/: .env-non-dev  .pre-commit-config.yaml  Dockerfile  alembic.ini  docker-compose.yaml  example.env  pyproject.toml
backend/docker/: app.sh
backend/migrations/: env.py
backend/migrations/versions/: 6bf54ccd3aad_init_db.py  82236a826eab_init_user_table.py
backend/src/: config.py  main.py  security.py
backend/src/database/: database.py
backend/src/models/: rooms.py  users.py
backend/src/repositories/: rooms.py  users_rooms.py
backend/src/routers/: __init__.py  auth.py  rooms.py  users.py
backend/src/schemas/: room.py  users.py
backend/src/services/: auth_service.py  room_service.py  user_service.py
backend/src/utils/: dependencies.py  repository.py  unitofwork.py
chatbot/: data.py  genre.ipynb  music.ipynb  music.py
client/: index.html  package-lock.json  package.json
client/src/: App.jsx  Login.jsx  api.auth.js  api.config.js  global.module.scss  main.jsx  privateRoute.jsx
client/src/components/Playbar/: Playbar.jsx  playbar.module.scss
client/src/config/: const.js
gradle/wrapper/: gradle-wrapper.properties
test_content/: .info
(+11 files in other folders)
