[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["ArtemBagin <artem.bagin@vk.com>"]
readme = "../README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.104.1"}


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
